force-app/main/default/objects/custom_create325__c/custom_create325__c.object-meta.xml
<CustomObject>
    <label>Custom created object325</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects325</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>