force-app/main/default/objects/custom_create325__c/fields/custom_create_325field538__c.field-meta.xml
<CustomField>
    <fullName>custom_create_325field538__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 325field538</label>
    <type>Checkbox</type>
</CustomField>